<resources>
    <string name="app_name">to-do</string>
    <string name="title_home">Home</string>
    <string name="title_newtask">Nueva Tarea</string>
    <string name="title_settings">Configuración</string>

    <string-array name="priority_array">
        <item>Todas</item>
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>

    <string name="category_work">Trabajo</string>
    <string name="category_personal">Personal</string>
    <string name="category_shopping">Compras</string>
    <string name="category_health">Salud</string>
    <string name="category_other">Otro</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="t_tulo">Título</string>
    <string name="t_tulo_de_la_tarea">Título de la tarea</string>
    <string name="descripci_n">Descripción</string>
    <string name="seleccionar_fecha_y_hora">Seleccionar Fecha y Hora</string>
    <string name="categor_a">Categoría</string>
    <string name="guardar_tarea">Guardar Tarea</string>
    <string name="filtrar_por_prioridad">Filtrar por prioridad</string>
    <string name="cancel_del_task">Cancelar</string>
    <string name="delete_del_task">Eliminar</string>
    <string name="confirm_del_task">¿Deseas eliminar la tarea?</string>
    <string name="no_tasks_alert">No hay tareas</string>
    <string name="category">Categoría</string>
    <string name="title_task">Título de la tarea</string>
    <string name="description_task">Descripción corta de la tarea</string>
    <string name="expiration_task">Fecha de vencimiento: 10/03/2024</string>
    <string name="priotiyy_task">Prioridad: Alta</string>
    <string name="priority_new_task">Prioridad</string>
    <string name="priority_new_task_high">Alta</string>
    <string name="priority_new_task_medium">Media</string>
    <string name="priority_new_task_low">Baja</string>
    <string name="agregar_tarea">Agregar tarea</string>

</resources>