<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newtask.view.NewTaskFragment"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/titleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/nueva_tarea"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="22dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toTopOf="@id/saveTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/t_tulo_de_la_tarea"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/leftLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="18dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripci_n"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:gravity="top|start" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/priorityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_new_task"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:layout_marginTop="16dp" />

                <RadioGroup
                    android:id="@+id/priorityGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
                    android:paddingHorizontal="8dp">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/priorityHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priority_new_task_high"
                        style="@style/Widget.MaterialComponents.CompoundButton.RadioButton" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/priorityMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priority_new_task_medium"
                        style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
                        android:layout_marginStart="16dp" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/priorityLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priority_new_task_low"
                        style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
                        android:layout_marginStart="16dp" />
                </RadioGroup>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/categoryLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categor_a"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:layout_marginTop="16dp" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:background="@drawable/spinner_border"
                    android:layout_marginHorizontal="22dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/selectDateTimeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:padding="6dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/seleccionar_fecha_y_hora"
                    android:textAllCaps="false"
                    app:cornerRadius="4dp"
                    app:backgroundTint="@color/black"
                    android:textColor="@android:color/white"
                    android:elevation="4dp"
                    />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="70dp"
        android:text="@string/guardar_tarea"
        android:textAllCaps="false"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

